[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/radial_bar.png" type="Texture" id=1]
[ext_resource path="res://Assets/radial_background.png" type="Texture" id=2]
[ext_resource path="res://Upgrades/OrbSpawners/FieldMedicOrbSpawner/FieldMedic.gd" type="Script" id=3]
[ext_resource path="res://Upgrades/OrbSpawners/FieldMedicOrbSpawner/ProgressBar.gd" type="Script" id=4]
[ext_resource path="res://Resources/Custom Resources/CurrentBobberStats.tres" type="Resource" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 89.4427

[sub_resource type="Animation" id=2]
resource_name = "Collapse"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FieldMedic" type="Area2D"]
modulate = Color( 1, 1, 1, 0 )
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )
bobber_stats = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collapse = SubResource( 2 )
anims/SetUp = SubResource( 3 )

[node name="ProgressBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -93.0
margin_right = 93.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 93, 93 )
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.498039 )
tint_progress = Color( 0, 1, 0, 0.501961 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeSpan" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CheckIfAnythingIsInside" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_FieldMedic_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FieldMedic_body_exited"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_LifeSpan_timeout"]
[connection signal="timeout" from="CheckIfAnythingIsInside" to="." method="_on_CheckIfAnythingIsInside_timeout"]
